<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <!-- Home -->
    <string name="home_title">Custom Launcher</string>
    <string name="show_all_apps">All</string>
    <string name="icon_view_edit_txt">编辑</string>

    <!-- Home Menus -->
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <!-- Wallpaper -->
    <string name="wallpaper_instructions">Tap picture to set portrait wallpaper</string>
    
    <!-- common -->
    <string name="save">保\t\t存</string>
    <string name="cancel">取\t\t消</string>
    
    <!-- AppInfoEditor -->
    <string name="modify_icon_info">修改瓷块信息</string>
    <string name="icon_size">瓷块大小</string>
    <string name="icon_color">瓷块颜色</string>
    <string name="icon_name">瓷块名称</string>
    <string name="icon_size_small">1 X 1</string>
    <string name="icon_size_large">1 X 2</string>
</resources>

